
- #10250, #10266: Dynamically allocate alternate signal stacks to
   accommodate changes in Glibc 2.34.
  (Xavier Leroy, reports by Tomasz Kłoczko and R.W.M. Jones, review by Anil
   Madhavapeddy, Stephen Dolan, and Florian Angeletti)

- #10318: Windows Unicode runtime functions are no longer marked as
  experimental.
  (Nicolás Ojeda Bär, review by David Allsopp)

### Code generation and optimizations:

- #9876: do not cache the young_limit GC variable in a processor register.
  This affects the ARM64, PowerPC and RISC-V ports, making signal handling
  and minor GC triggers more reliable, at the cost of a small slowdown.
  (Xavier Leroy, review by Nicolás Ojeda Bär)

- #9937: improvements in ARM64 code generation (constants, sign extensions)
  (Xavier Leroy, review by Stephen Dolan)

- #10228: Better code-generation for inlined comparisons
  (Stephen Dolan, review by Alain Frisch and Xavier Leroy)

- #10244: Optimise Int32.unsigned_to_int
  (Fabian Hemmer, review by Stephen Dolan and Xavier Leroy)

- #10302, #10303: Fix incorrect instruction selection for string constant loads
  on ppc.
  (David Allsopp, review by Stephen Dolan)

- #10349: Fix destroyed_at_c_call on RISC-V
  (Mark Shinwell, review by Nicolás Ojeda Bär)

### Type system:

* #10081: Typecheck `x |> f` and `f @@ x` as `(f x)`
  (Alain Frisch, review by Jacques Garrigue, Josh Berdine and Thomas Refis)

### Standard library:

- #9448: Add String.{empty,cat} as dual of Bytes.{empty,cat},
  String.{of,to}_bytes as aliases of Bytes.{to,of}_string,
  Bytes.split_on_char as dual of String.split_on_char, and binary decoding
  functions in String to match those in Bytes.
  (David Allsopp, review by Damien Doligez, Gabriel Scherer and others)

- #9533: Added String.starts_with and String.ends_with.
  (Bernhard Schommer, review by Daniel Bünzli, Gabriel Scherer and
  Alain Frisch)

- #9582: Add Array.{find_opt,find_map,split,combine}.
  (Nicolás Ojeda Bär, review by Daniel Bünzli and Gabriel Scherer)
